@@ -1,3 +1,8 @@
+2011-07-20  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/std/bitset (operator[]): Make constexpr.
+	* testsuite/23_containers/bitset/operations/constexpr.cc: New.
+
 2011-07-20  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* include/debug/safe_local_iterator.h (_Safe_local_iterator<>::
